feat: complete fullstack enterprise infrastructure, portal routes, and UI enhancements